Fix breakage caused by gtk3.19 changes -pt2
Major changes on 2-29-2016 to GTK 3.19.10 broke the scale sliders and scrollbar sliders. Fix these and also fix broken levelbars and combobox buttons.  Many more things now need min-width and min-height explicitly specified to work. Also, background image handling changed in troughs due to "gadget" changes today

--- a/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/desktop-themes/BlackMATE/gtk-3.0/gtk-widgets-assets-dark.css
@@ -278,6 +278,8 @@ combobox.combobox-entry  button {
 scale slider,
 scale slider.horizontal {
 	background-image: url("assets/scale-slider-horizontal-dark.svg");
+	min-width: 16px;
+	min-height: 16px;
 }
 
 scale slider:disabled,
@@ -287,6 +289,8 @@ scale slider.horizontal:disabled {
 
 scale slider.vertical {
 	background-image: url("assets/scale-slider-vertical-dark.svg");
+	min-width: 16px;
+	min-height: 16px;
 }
 
 scale slider.vertical:disabled {
@@ -426,3 +430,26 @@ notebook tab.left:active {
 notebook tab.right:active {
 	border-image: url("assets/tab-right-active-border.svg") 3 3 3 0 / 3px 3px 3px 0px stretch;
 }
+
+/*********************
+ * Scrollbar buttons *
+ *********************/
+/* cannot add these to the GIT repo, but they are needed to fix wrong arrow orientation
+
+scrollbar.vertical button.up {
+	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-up.svg"));
+}
+
+scrollbar.vertical button.down {
+	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-down.svg"));
+}
+
+scrollbar.horizontal button.up {
+	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-left.svg"));
+}
+
+scrollbar.horizontal button.down {
+	-gtk-icon-source: -gtk-scaled(url("assets/scrollbar-arrow-right.svg"));
+}
+
+*/
